====================================================
Interlude (ANR-08-CORD-010)
----------------------------------------------------
GRAME - Centre national de creation musicale
http://www.grame.fr
research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010,2011

----------------------------------------------------
Version 0.70
- support for multiple scenes (scene 'new', 'del' and 'foreground' messages)
- 'load' message supported at scene level.
- get 'watch' implemented
- interaction variables extension: new $scene variable in the address field
- support 'watch' message without argument to clear all the watched events
- drag and drop supports any file in INScore viewer
- order of rendering and width,height update corrected

----------------------------------------------------
Version 0.64
- drag and drop inscore files support in INScore viewer
- interaction variables extension:
  $sx, $sy variables added to support scene coordinate space
  automatic range mapping for $x, $y variables
  new $self variable in the address field

----------------------------------------------------
Version 0.63
- new 'mousemove' event
- interaction messages accept variables ($x, $y, $date...)
- new 'svg' and 'svgf' types for svg components
- set line message change: the x y form is deprecated, it is replaced by
  the following forms:
  'xy' x y equivalent to the former form
  'wa' width angle 

----------------------------------------------------
Version 0.62
- utf8 support on windows corrected
- transparency support for stretched synchronized objects corrected
- new 'effect' message

----------------------------------------------------
Version 0.61
- multiple application instances supported with dynamic udp port number allocation
- command line option with --port portnumber option to set the receive udp port number at startup

----------------------------------------------------
Version 0.60 - July 7 2010
- new xorigin and yorigin messages